# generative-flight-predictions

./: .gitignore  LICENSE  OSN_paper_training_1min.ipynb  README.md  generate_predictions.py  main.tex  metrics.py  model.py  osn_paper_crm.ipynb  osn_paper_results_1min.ipynb  pyproject.toml
notebooks/: OSN_paper_training_1min.ipynb  osn_paper_crm.ipynb  osn_paper_results_1min.ipynb
utils/: __init__.py  generate_predictions.py  inference_utils.py  metrics.py  model_viz.py  plot_utils.py  training_utils.py  utils.py
